compiler/testData/checkerWithErrorTypes/quick/regressions/control-flow-analysis/kt510.jet
//KT-510 `this.` allows initialization without backing field

namespace kt510

public open class Identifier1() {
    var field : Boolean
    {
        <!INITIALIZATION_USING_BACKING_FIELD!>field<!> = false; // error
    }
}


public open class Identifier2() {
    var field : Boolean
    {
        <!INITIALIZATION_USING_BACKING_FIELD!>this.field<!> = false;
    }
}